--- a/apps/core/templates/index.html
+++ b/apps/core/templates/index.html
@@ -1,2 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}Index - App{% endblock %}
+
+{% block main %}
+      <div class="row">
+            <div class="col-sm">
+                One of three columns
+            </div>
+            <div class="col-sm">
+                One of three columns
+            </div>
+            <div class="col-sm">
+                One of three columns
+            </div>
+      </div>
+{% endblock %}
