--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block main %}
     {% for funcionario in object_list %}
-        {{funcionario}}
+        <a href="{% url 'update_funcionarios' funcionario.id %}">{{funcionario}}</a><br>
     {% endfor %}
 {% endblock %}
