--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block main %}
     {% for funcionario in object_list %}
-        <a href="{% url 'update_funcionarios' funcionario.id %}">{{funcionario}}</a><br>
+        <a href="{% url 'update_funcionarios' funcionario.id %}">{{funcionario}}</a>
+        <a href="{% url 'delete_funcionarios' funcionario.id %}" >Delete</a>
+        <br>
     {% endfor %}
 {% endblock %}
