Aula 23 - Crud Funcionario, Create

--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -5,4 +5,5 @@
         <a href="{% url 'delete_funcionarios' funcionario.id %}" >Delete</a>
         <br>
     {% endfor %}
+    <a href="{% url 'create_funcionario' %}" class="btn btn-info">Novo</a>
 {% endblock %}
