--- a/apps/core/templates/index.html
+++ b/apps/core/templates/index.html
@@ -7,11 +7,12 @@
                 One of three columns
             </div>
             <div class="col-sm">
-                Olá {{ usuario.funcionario.nome }}
-                <a href="{% url 'list_funcionarios' %}">Gerencia funcionario</a>
+                Olá {{ usuario.funcionario.nome }}<br>
+                <a href="{% url 'list_funcionarios' %}">Gerenciar Funcionario</a><br>
+                <a href="{% url 'list_departamentos' %}">Gerenciar Departamento</a>
             </div>
             <div class="col-sm">
-                <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'logout' %}">Logout</a><br>
 
                 {% if usuario.funcionario.empresa %}
                     <a href="{% url 'edit_empresa' usuario.funcionario.empresa.id %}">Editar empresa</a>
