Aula 25 - Crud Departamentos, Create

--- a/apps/departamentos/templates/departamentos/departamento_list.html
+++ b/apps/departamentos/templates/departamentos/departamento_list.html
@@ -5,5 +5,5 @@
         <a href="" >Delete</a>
         <br>
     {% endfor %}
-    <a href="" class="btn btn-info">Novo</a>
+    <a href="{% url 'create_departamento' %}" class="btn btn-info">Novo</a>
 {% endblock %}
