--- a/apps/departamentos/templates/departamentos/departamento_list.html
+++ b/apps/departamentos/templates/departamentos/departamento_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block main %}
     {% for departamento in object_list %}
-        <a href="">{{ departamento }}</a>
+        <a href="{% url 'update_departamento' departamento.id %}">{{ departamento }}</a>
         <a href="" >Delete</a>
         <br>
     {% endfor %}
