--- a/apps/departamentos/templates/departamentos/departamento_list.html
+++ b/apps/departamentos/templates/departamentos/departamento_list.html
@@ -2,7 +2,7 @@
 {% block main %}
     {% for departamento in object_list %}
         <a href="{% url 'update_departamento' departamento.id %}">{{ departamento }}</a>
-        <a href="" >Delete</a>
+        <a href="{% url 'delete_departamento' departamento.id %}">Delete</a>
         <br>
     {% endfor %}
     <a href="{% url 'create_departamento' %}" class="btn btn-info">Novo</a>
