--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -9,7 +9,8 @@
             <div class="col-sm">
                 Olá {{ usuario.funcionario.nome }}<br>
                 <a href="{% url 'list_funcionarios' %}">Gerenciar Funcionario</a><br>
-                <a href="{% url 'list_departamentos' %}">Gerenciar Departamento</a>
+                <a href="{% url 'list_departamentos' %}">Gerenciar Departamento</a><br>
+                <a href="{% url 'list_hora_extra' %}">Gerenciar Banco de Horas</a>
             </div>
             <div class="col-sm">
                 <a href="{% url 'logout' %}">Logout</a><br>
