--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_list.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_list.html
@@ -10,4 +10,5 @@
         <h3>Não existe registro de horas extras.</h3>
     {% endif %}
 
+    <a href="{% url 'create_hora_extra' %}" class="btn btn-info">Criar registro de hora extra</a>
 {% endblock %}
