--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -20,7 +20,7 @@
 <h2>Hora Extras</h2>
 <ul>
 {% for registro_hora in object.registrohoraextra_set.all %}
-    <li>{{ registro_hora.motivo }} | {{ registro_hora.horas}}</li><br>
+    <li><a href="{% url 'update_hora_extra' registro_hora.id %}">{{ registro_hora.motivo }} | {{ registro_hora.horas}}</a></li><br>
 {% endfor  %}
 </ul>
 
